@@ -1,3 +1,9 @@
+2020-07-29  Dirk Eddelbuettel  <edd@debian.org>
+
+	* README.md: Updated, added some badges
+
+	* .travis.yml: Update to 'bionic' and R 4.0.*
+
 2019-12-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll version number and date
